--- a/main.css
+++ b/main.css
@@ -361,7 +361,7 @@ body .portfolio .portfolio-content {
 }
 body .portfolio .portfolio-content .box {
   background-color: #2a2a2a;
-  padding: 10px;
+  padding: 20px;
   padding-top: 2px;
   position: relative;
   overflow: hidden;
@@ -372,6 +372,7 @@ body .portfolio .portfolio-content .box {
 body .portfolio .portfolio-content .box .image {
   position: relative;
   overflow: hidden;
+  padding-top: 10px;
   cursor: pointer;
   margin-bottom: 15px;
 }
@@ -381,7 +382,7 @@ body .portfolio .portfolio-content .box .image:hover .overlay {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(87, 146, 224, 0.4);
+  background-color: rgba(87, 146, 224, 0.1);
 }
 body .portfolio .portfolio-content .box .image:hover img {
   -webkit-transform: scale(1.2);
@@ -430,7 +431,7 @@ body .portfolio .portfolio-content .box a i:hover {
 body .portfolio .portfolio-content .box p {
   margin-top: 20px;
   color: #ccc;
-  font-size: 1rem;
+  font-size: 0.9rem;
   line-height: 1.7;
 }
 body .portfolio .portfolio-content .box p span {
