new changes Added

--- a/main.scss
+++ b/main.scss
@@ -198,7 +198,7 @@ body {
                     font-size: $p-font;
                     margin-bottom: 2rem;
                     line-height: 1.8;
-                    color: $sec-color;
+                    color: #ebebeb;
 
                 }
 
