--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
@@ -31,13 +32,21 @@ body header {
   top: 0;
   width: 100%;
   z-index: 1000;
-  box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+  -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+          box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background: #2a2a2a;
   padding: 20px 15px;
   border-bottom: 1px solid transparent;
+  -webkit-transition: all 0.45s ease;
   transition: all 0.45s ease;
 }
 body header .logo {
@@ -47,9 +56,11 @@ body header .logo {
   font-size: 35px;
 }
 body header .logo span {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body header .navlist {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 body header .navlist li a {
@@ -58,13 +69,14 @@ body header .navlist li a {
   font-size: 18px;
   margin: 0 25px;
   cursor: pointer;
+  -webkit-transition: all 0.45 ease;
   transition: all 0.45 ease;
 }
 body header .navlist li a:hover {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body header .navlist li a.active {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body header #menu-icon {
   font-size: 35px;
@@ -77,6 +89,7 @@ body header #menu-icon {
 @media (max-width: 1480px) {
   body header {
     padding: 12px 2.5%;
+    -webkit-transition: 0.1s;
     transition: 0.1s;
   }
 }
@@ -93,17 +106,19 @@ body section {
 }
 body .btn {
   padding: 12px 25px;
-  background-color: hsl(214, 69%, 61%);
+  background-color: hsl(214deg, 69%, 61%);
   display: inline-block;
   color: #fff;
   border-radius: 5px;
   font-size: 1rem;
   letter-spacing: 1.1;
+  -webkit-transition: all 0.45s ease;
   transition: all 0.45s ease;
   font-weight: 600;
 }
 body .btn:hover {
-  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
   background-color: rgba(87, 146, 224, 0.6);
 }
 body .home {
@@ -113,12 +128,18 @@ body .home {
   background-image: url("imgs/pexels-lukas-574071.jpg");
   background-size: cover;
   background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 body .home div span {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body .home div.slide {
   margin-bottom: 20px;
@@ -128,7 +149,7 @@ body .home div.slide .one {
   height: 2rem;
   line-height: 2rem;
   padding: 0 20px;
-  background-color: hsl(214, 69%, 61%);
+  background-color: hsl(214deg, 69%, 61%);
   border-radius: 0.3rem;
   color: #fff;
 }
@@ -153,17 +174,29 @@ body .home div.home-text p {
   font-size: 1.1rem;
   margin-bottom: 2rem;
   line-height: 1.8;
-  color: #ccc;
+  color: #ebebeb;
 }
 body .home div.home-text .button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 body .home div.home-text .button .btn2 {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #fff;
   font-weight: 600;
   font-size: 15px;
@@ -172,24 +205,36 @@ body .home div.home-text .button .btn2 {
 body .home div.home-text .button .btn2 span i {
   width: 55px;
   height: 55px;
-  background-color: hsl(214, 69%, 61%);
+  background-color: hsl(214deg, 69%, 61%);
   color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 35px;
   border-radius: 50%;
+  -webkit-transition: all 0.45s ease;
   transition: all 0.45s ease;
   margin-right: 1.5rem;
 }
 body .home div.home-text .button .btn2 span i:hover {
-  transform: scale(1.1) translateY(5px) rotate(-180deg);
+  -webkit-transform: scale(1.1) translateY(5px) rotate(-180deg);
+          transform: scale(1.1) translateY(5px) rotate(-180deg);
 }
 body .about {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: minmax(370px, 1fr) 1.5rem minmax(370px, 1fr);
   grid-template-columns: repeat(2, minmax(370px, 1fr));
   gap: 1.5rem;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 body .about .image img {
   width: 30rem;
@@ -208,7 +253,7 @@ body .about .about-text h4 {
   margin: 15px 0 30px;
 }
 body .about .about-text span {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body .about .about-text p {
   font-size: 1.1rem;
@@ -217,14 +262,14 @@ body .about .about-text p {
   color: #ccc;
 }
 body .skills {
-  background-color: hsl(0, 0%, 13%);
+  background-color: hsl(0deg, 0%, 13%);
 }
 body .skills .main-text {
   text-align: center;
   margin-bottom: 2rem;
 }
 body .skills .main-text span {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body .skills .main-text p {
   color: #ccc;
@@ -236,24 +281,32 @@ body .skills .main-text h2 {
   line-height: 1;
 }
 body .skills .skills-content {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fill, 120px);
   gap: 1.5rem 1.5rem;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 body .skills .skills-content .box {
   text-align: center;
   height: 150px;
   background-color: #2a2a2a;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+          box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  -webkit-transition: all 0.35s ease;
   transition: all 0.35s ease;
 }
 body .skills .skills-content .box:hover {
-  transform: translateY(10px);
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
 }
 body .skills .skills-content .box:hover h4 {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body .skills .skills-content .box h4 {
   margin: 10px;
@@ -262,10 +315,12 @@ body .skills .skills-content .box div {
   width: 80px;
   height: 80px;
   margin: auto;
+  -webkit-transition: all 0.35s ease;
   transition: all 0.35s ease;
 }
 body .skills .skills-content .box div:hover {
-  transform: scale(1.2) rotate(30deg);
+  -webkit-transform: scale(1.2) rotate(30deg);
+          transform: scale(1.2) rotate(30deg);
 }
 body .skills .skills-content .box div i {
   font-size: 80px;
@@ -276,14 +331,14 @@ body .skills .skills-content .box div img {
   border-radius: 50%;
 }
 body .portfolio {
-  background-color: hsl(0, 0%, 13%);
+  background-color: hsl(0deg, 0%, 13%);
 }
 body .portfolio .main-text {
   text-align: center;
   margin-bottom: 2rem;
 }
 body .portfolio .main-text span {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body .portfolio .main-text p {
   color: #ccc;
@@ -295,10 +350,13 @@ body .portfolio .main-text h2 {
   line-height: 1;
 }
 body .portfolio .portfolio-content {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(370px, auto));
   gap: 2.5rem;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 3rem;
 }
 body .portfolio .portfolio-content .box {
@@ -327,14 +385,18 @@ body .portfolio .portfolio-content .box .image:hover .overlay {
   background-color: rgba(87, 146, 224, 0.1);
 }
 body .portfolio .portfolio-content .box .image:hover img {
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 body .portfolio .portfolio-content .box .image img {
   border-radius: 10px;
   width: 100%;
   height: 380px;
   display: block;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
   transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
 }
 body .portfolio .portfolio-content .box a {
   padding-top: 25px;
@@ -343,20 +405,28 @@ body .portfolio .portfolio-content .box a {
   color: #fff;
 }
 body .portfolio .portfolio-content .box a i {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
   font-size: 25px;
   margin-left: 1rem;
   background-color: #fff;
   width: 60px;
   height: 60px;
   border-radius: 50%;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 body .portfolio .portfolio-content .box a i:hover {
-  transform: translateY(-2px) rotate(20deg);
+  -webkit-transform: translateY(-2px) rotate(20deg);
+          transform: translateY(-2px) rotate(20deg);
 }
 body .portfolio .portfolio-content .box p {
   margin-top: 20px;
@@ -365,20 +435,24 @@ body .portfolio .portfolio-content .box p {
   line-height: 1.7;
 }
 body .portfolio .portfolio-content .box p span {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body .contact {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 2.5rem 1fr;
   grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-  background-color: hsl(0, 0%, 13%);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: hsl(0deg, 0%, 13%);
   gap: 2.5rem;
 }
 body .contact .contact-text {
   margin-bottom: 2rem;
 }
 body .contact .contact-text span {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
 }
 body .contact .contact-text p {
   color: #ccc;
@@ -411,9 +485,10 @@ body .contact .contact-ways .email h5 {
 body .contact .contact-ways .email .success {
   opacity: 0;
   display: block;
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
   font-size: 15px;
   padding: 10px;
+  -webkit-transition: all 0.45s ease;
   transition: all 0.45s ease;
 }
 body .contact .contact-ways .email .success.active {
@@ -426,11 +501,13 @@ body .contact .contact-ways .email input {
   background-color: transparent;
   border: none;
   outline: none;
+  -webkit-transition: all 0.45s ease;
   transition: all 0.45s ease;
 }
 body .contact .contact-ways .email input:hover {
   color: #fff;
-  transform: translateX(-10px);
+  -webkit-transform: translateX(-10px);
+          transform: translateX(-10px);
 }
 body .contact .contact-ways .email #copy-btn {
   margin-left: 10px;
@@ -438,32 +515,47 @@ body .contact .contact-ways .email #copy-btn {
   cursor: pointer;
 }
 body .contact .contact-ways .email #copy-btn:hover {
-  color: hsl(214, 69%, 61%);
-  transform: translatey(-10px) scale(1.5);
+  color: hsl(214deg, 69%, 61%);
+  -webkit-transform: translatey(-10px) scale(1.5);
+          transform: translatey(-10px) scale(1.5);
 }
 body .contact .contact-ways .contact-ions i {
   height: 50px;
   width: 50px;
-  background-color: hsl(214, 69%, 61%);
+  background-color: hsl(214deg, 69%, 61%);
   color: #fff;
   font-size: 25px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 8px;
   margin-left: 15px;
+  -webkit-transition: all 0.45s ease;
   transition: all 0.45s ease;
 }
 body .contact .contact-ways .contact-ions i:hover {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
   background-color: #fff;
 }
 body .footer {
   padding: 20px 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-self: center;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: #2a2a2a;
   gap: 2rem;
 }
@@ -476,10 +568,10 @@ body .footer .totop i {
   padding: 10px;
   border-radius: 8px;
   color: #fff;
-  background-color: hsl(214, 69%, 61%);
+  background-color: hsl(214deg, 69%, 61%);
 }
 body .footer .totop i:hover {
-  color: hsl(214, 69%, 61%);
+  color: hsl(214deg, 69%, 61%);
   background-color: #fff;
 }
 
@@ -491,16 +583,20 @@ body .footer .totop i:hover {
     height: 87vh;
   }
   :root {
+    -webkit-transition: 0.1s;
     transition: 0.1s;
   }
 }
 @media (max-width: 920px) {
   body .about {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
   body .about .image {
     text-align: center;
-    order: 2;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
   body .about .image img {
     height: auto;
@@ -508,6 +604,7 @@ body .footer .totop i:hover {
     max-width: 100%;
   }
   body .contact {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
@@ -520,21 +617,28 @@ body .footer .totop i:hover {
     top: -1000px;
     right: 0;
     left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background-color: #2a2a2a;
     text-align: left;
+    -webkit-transition: all 0.45s ease;
     transition: all 0.45s ease;
   }
   body .header .navlist a {
     display: block;
     margin: 15px;
     font-size: 20px;
+    -webkit-transition: all 0.45s ease;
     transition: all 0.45s ease;
     color: #fff;
   }
   body .header .navlist a:hover {
-    color: hsl(214, 69%, 61%);
+    color: hsl(214deg, 69%, 61%);
   }
   body .header .navlist a.active {
     color: #fff;
@@ -544,6 +648,8 @@ body .footer .totop i:hover {
   }
   body .skills .skills-content {
     grid-template-columns: repeat(auto-fit, 150px);
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-}/*# sourceMappingURL=main.css.map */
+}
